# android-bionic-libc

./: .clang-format  .editorconfig  .gdb_history  .gitignore  0001-Fix-vfork-function-calling-__set_errno_internal-comp.patch  ABI-bugs.txt  Android.bp  Android.mk  BionicOptions.mk  CleanSpec.mk  NOTICE  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  Test 2.txt  Untitled Document 2  android-changes-for-ndk-developers.md  bionic-host.mk  bionic_host_shared_library.mk  bionic_host_static_library.mk  format-all.sh  groups  patch.diff  project.config  test.txt  x  x.cpp
libc/: Android.bp  Android.mk  BUILD  BUILD.bazel  Blueprints  CAVEATS  NOTICE  SECCOMP_ALLOWLIST_COMMON.TXT  SECCOMP_BLACKLIST.TXT  SECCOMP_BLACKLIST_APP.TXT  SECCOMP_BLACKLIST_COMMON.TXT  SECCOMP_BLACKLIST_GLOBAL.TXT  SECCOMP_BLOCKLIST_COMMON.TXT  SECCOMP_WHITELIST.TXT  SECCOMP_WHITELIST_COMMON.TXT  SECCOMP_WHITELIST_GLOBAL.TXT  SECCOMP_WHITELIST_SYSTEM.TXT  SYSCALLS.TXT  arm64_app_policy.cpp  arm64_app_zygote_policy.cpp  arm64_system_policy.cpp  arm_app_policy.cpp  arm_app_zygote_policy.cpp  arm_system_policy.cpp  bindgen_wrapper.h  crash_lib.cc  crt.mk  experimental_cc_shared_library.bzl  find_cc_toolchain.bzl  full_cc_library.bzl  func_to_syscall_nrs.h  head_experimental_cc_shared_library.bzl  libc.arm.brillo.map  libc.arm.map  libc.arm64.map  libc.map  libc.map.txt  libc.mips.brillo.map  libc.mips.map  libc.mips64.map  (+17 more)
libc/arch-aarch64/: aarch64.mk  syscalls.mk
libc/arch-arm/: arm.mk  arm.mk.orig  dynamic_function_dispatch.c  dynamic_function_dispatch.cpp  function_delegate.S  ifunc.cpp  ifunc_static.cpp  static_function_dispatch.S  syscalls.S  syscalls.mk
libc/arch-arm64/: arm64.mk  dynamic_function_dispatch.cpp  ifunc.cpp  ifunc_static.cpp  static_function_dispatch.S  syscalls.S  syscalls.mk
libc/arch-mips/: mips.mk  syscalls.S  syscalls.mk
libc/arch-mips64/: mips64.mk  syscalls.S  syscalls.mk
libc/arch-riscv64/: dynamic_function_dispatch.cpp  static_function_dispatch.S
libc/arch-sh/: syscalls.mk
libc/arch-x32/: bionic  include  syscalls.mk  x32.mk
libc/arch-x86/: cache.h  dynamic_function_dispatch.c  dynamic_function_dispatch.cpp  function_dispatch.cpp  syscalls.S  syscalls.mk  x86.mk
libc/arch-x86_64/: dynamic_function_dispatch.cpp  static_function_dispatch.S  syscalls.S  syscalls.mk  x86_64.mk
libc/async_safe/: Android.bp  BUILD  BUILD.bazel  README.md  async_safe_log.cpp
libc/async_safe_log/: Android.bp  async_safe_log.cpp
libc/bionic/: NetdClient.cpp  NetdClientDispatch.cpp  ThreadLocalBuffer.h  __FD_chk.cpp  __bionic_get_shell_path.cpp  __bionic_name_mem.cpp  __cmsg_nxthdr.cpp  __cxa_guard.cpp  __cxa_pure_virtual.cpp  __cxa_thread_atexit_impl.cpp  __errno.c  __errno.cpp  __fgets_chk.cpp  __gnu_basename.cpp  __gnu_basename.h  __libc_current_sigrtmax.cpp  __libc_current_sigrtmin.cpp  __libc_init_main_thread.cpp  __memcpy_chk.cpp  __memmove_chk.cpp  __memset_chk.cpp  __poll_chk.cpp  __raise.c  __read_chk.cpp  __realpath_chk_fail.cpp  __recv_chk.cpp  __recvfrom_chk.cpp  __set_errno.cpp  __stack_chk_fail.cpp  __stpcpy_chk.cpp  __stpncpy_chk.cpp  __strcat_chk.cpp  __strchr_chk.cpp  __strcpy_chk.cpp  __strlcat_chk.cpp  __strlcpy_chk.cpp  __strlen_chk.cpp  __strncat_chk.cpp  __strncpy_chk.cpp  __strrchr_chk.cpp  (+402 more)
libc/dns/: gethnamaddr.c
libc/docs/: CHANGES.TXT
libc/fts-include/: fts.h
libc/fuzz/: gdtoa_fuzzer.cpp
libc/include/: alloca.h  bionic_external_symbols.h  bionic_internal_symbols.h  byteswap.h  common.h  complex.h  ctype.h  dirent.h  dlfcn.h  doxygen-config  elf.h  err.h  errno.h  error.h  execinfo.h  extern.h  fcntl.h  fenv.h  fnmatch.h  fts.h  ftw.h  getopt.h  glob.h  grp.h  ifaddrs.h  inttypes.h  langinfo.h  libgen.h  limits.h  link.h  locale.h  malloc.h  math.h  mntent.h  monetary.h  netdb.h  nl_types.h  nsswitch.h  paths.h  poll.h  (+33 more)
libc/include_extra/: page_agnostic.h
libc/inet/: ether_aton.c  ether_ntoa.c
libc/libc_log/: log.h
libdl/: Android.bp  Android.mk  BUILD.bazel  Blueprints  NOTICE  generate-version-script.py  ld_android.c  libdl.arm.map  libdl.arm64.map  libdl.c  libdl.cpp  libdl.map  libdl.map.txt  libdl.mips64.map  libdl.x86.map  libdl_android.cpp  libdl_android.map.txt  libdl_cfi.cpp  libdl_static.cpp
libm/: Android.bp  Android.mk  BUILD  BUILD.bazel  Blueprints  NOTICE  builtins.cpp  fabs.cpp  fake_long_double.c  fenv-access.h  fpmath.h  freebsd-compat.h  freebsd-weak-symbols.h  libm.arm.map  libm.map  libm.map.txt  rintl.c  s_cbrt.c  s_isfinite.c  s_isnormal.c  s_signbit.c  signbit.c  sincos.c  sqrt.cpp  weak-symbols.h
linker/: 0001-bionic-Use-max_page_size-for-LOAD-segment-alignment.patch  Android.bp  Android.mk  BUILD  BUILD.bazel  Blueprints  NOTICE  TEST_MAPPING  aprof.c  debugger.c  debugger.cpp  dlfcn.c  dlfcn.cpp  ld.config.format.md  ld_android.cpp  ldd  linked_list.h  linker  linker.arm.map  linker.c  linker.cpp  linker.generic.map  linker.h  linker_allocator.cpp  linker_allocator.h  linker_api_levels.cpp  linker_bionic_signals.cpp  linker_bionic_signals.h  linker_block_allocator.cpp  linker_block_allocator.h  linker_block_allocator_test.cpp  linker_cfi.cpp  linker_cfi.h  linker_common_types.h  linker_compressed_leb128.cpp  linker_compressed_leb128.h  linker_compressed_sleb128.cpp  linker_compressed_sleb128.h  linker_config.cpp  linker_config.h  (+61 more)
tests/: Android.bp  Android.build.mk  Android.build.prebuilt.mk  Android.mk  AndroidTest.xml  BUILD.bazel  BionicDeathTest.h  BufferTests.cpp  CrashCatch.h  FixedIn.h  NOTICE  PlatformVersion.cpp  PlatformVersion.h  ScopedSignalHandler.h  TemporaryFile.h  __cxa_demangle_test.cpp  __cxa_thread_atexit_test.cpp  _dl_appsdk_test.cpp  accept4_test.cpp  alloca_test.cpp  android_fast_backtrace_test.cpp  android_get_device_api_level.cpp  android_unsafe_frame_pointer_chase_test.cpp  appapi_test.cpp  appsdk_test.cpp  arpa_inet_test.cpp  assert_test.cpp  async_safe_log_test.cpp  async_safe_test.cpp  atexit_test.cpp  atexit_testbin.cpp  atexit_testlib.cpp  benchmark.h  benchmark_main.cpp  benchmark_test.cpp  bionic_gtest.h  bionic_string_utils_test.cpp  buffer_tests.cpp  buffer_tests.h  byteswap_test.cpp  (+339 more)
(+3590 files in other folders)
