# Targets required to build libdl for the target device.

package(default_visibility = ["//visibility:public"])

load("//build/bazel/rules:cc_shared_library.bzl", "cc_shared_library")

cc_library(
    name = "libdl",
    srcs = [
        "libdl.cpp",
        "libdl_cfi.cpp",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-Wunused",
        "-Werror",
    ],
    deps = [
        "//bionic/libc:includes_for_bionic",
    ],
)

cc_library(
    name = "libdl_android",
    srcs = ["libdl_android.cpp"],
    copts = [
        "-Wall",
        "-Wextra",
        "-Wunused",
        "-Werror",
    ],
    linkopts = [
        "-Wl,--exclude-libs=libgcc.a",
        "-Wl,--exclude-libs=libgcc_stripped.a",
        "-Wl,--exclude-libs=libclang_rt.builtins-arm-android.a",
        "-Wl,--exclude-libs=libclang_rt.builtins-aarch64-android.a",
        "-Wl,--exclude-libs=libclang_rt.builtins-x86-android.a",
        "-Wl,--exclude-libs=libclang_rt.builtins-x86_64-android.a",
    ],
    deps = [
        "//bionic/libc:includes_for_bionic",
    ],
)

cc_library(
    name = "libdl_shared_required_deps",
    deps = [
        # TODO(cparsons): Move to toolchain. This is an implicit dependency of all .so builds.
        "//prebuilts/clang/host/linux-x86:libclang_rt",
    ],
)

cc_shared_library(
    name = "libdl_shared",
    dynamic_deps = [
        "//bionic/linker:ld_android",
    ],
    features = ["disable_rpath"],
    user_link_flags = [
        "-Wl,-soname,libdl.so",
        "-Wl,--pack-dyn-relocs=android+relr",
        "-Wl,--use-android-relr-tags",
    ],
    visibility = ["//visibility:public"],
    visibility_file = ":libdl_shared_visibility_file",
    roots = [
        ":libdl",
        ":libdl_shared_required_deps",
    ],
    static_deps = [
        "//prebuilts/clang/host/linux-x86:libclang_rt",
    ],
)

alias(
    name = "libdl_shared_visibility_file",
    actual = select({
        "//build/bazel/platforms:config_x86_64": ":libdl.x86_64.map",
        "//build/bazel/platforms:config_x86": ":libdl.x86.map",
        "//build/bazel/platforms:config_arm64": ":libdl.arm64.map",
        "//build/bazel/platforms:config_arm": ":libdl.arm.map",
    }),
)

genrule(
    name = "libdl.arm.map",
    cmd = "$(location //bionic/tools:bionic-generate-version-script) arm $(SRCS) $(OUTS)",
    outs = [
        "libdl.arm.map",
    ],
    srcs = [
        "libdl.map.txt",
    ],
    tools = [
        "//bionic/tools:bionic-generate-version-script",
    ],
)

genrule(
    name = "libdl.arm64.map",
    cmd = "$(location //bionic/tools:bionic-generate-version-script) arm64 $(SRCS) $(OUTS)",
    outs = [
        "libdl.arm64.map",
    ],
    srcs = [
        "libdl.map.txt",
    ],
    tools = [
        "//bionic/tools:bionic-generate-version-script",
    ],
)

genrule(
    name = "libdl.x86.map",
    cmd = "$(location //bionic/tools:bionic-generate-version-script) x86 $(SRCS) $(OUTS)",
    outs = [
        "libdl.x86.map",
    ],
    srcs = [
        "libdl.map.txt",
    ],
    tools = [
        "//bionic/tools:bionic-generate-version-script",
    ],
)

genrule(
    name = "libdl.x86_64.map",
    cmd = "$(location //bionic/tools:bionic-generate-version-script) x86_64 $(SRCS) $(OUTS)",
    outs = [
        "libdl.x86_64.map",
    ],
    srcs = [
        "libdl.map.txt",
    ],
    tools = [
        "//bionic/tools:bionic-generate-version-script",
    ],
)
